<resources>
    <string name="app_name">crudApplication</string>

    <!-- AddUserFragment -->
    <string name="add_user_fragment_editname_hint">이름</string>
    <string name="add_user_fragment_edit_phone">핸드폰</string>
    <string name="add_user_fragment_edit_address">주소</string>
    <string name="add_user_fragment_edit_save_button">저장</string>

    <!-- DetailActivityFragment -->
    <string name="detail_fragment_btn_edit">편집</string>
    <string name="detail_fragment_tv_name">이름</string>
    <string name="detail_fragment_phone_title">휴대전화</string>
    <string name="detail_fragment_phone_value">010-0000-0000</string>
    <string name="detail_fragment_address_title">주소</string>
    <string name="detail_fragment_address_value">서울특별시 강남구</string>
    <string name="detail_fragment_btn_call">전화</string>
    <string name="detail_fragment_btn_message">메시지</string>

    <!-- LoginFragment -->
    <string name="login_fragment_tv_login">로그인</string>
    <string name="login_fragment_et_email2_hint">Email</string>
    <string name="login_fragment_et_password2_hint">Password</string>
    <string name="login_fragment_et_btn_register">회원가입</string>

    <!-- MainFragment -->
    <string name="main_fragment_logout_text">로그아웃</string>
    <string name="main_fragment_delete_account_text">회원탈퇴</string>
    <string name="main_fragment_contacts_title">연락처</string>
    <string name="main_fragment_profile_name">내 이름</string>

    <!-- RegisterFragment -->
    <string name="register_fragment_tv_register">회원가입</string>
    <string name="register_fragment_et_email">Email</string>
    <string name="register_fragment_et_password">Password</string>
    <string name="register_fragment_et_name">Name</string>
    <string name="register_fragment_et_phone">Phone</string>
    <string name="register_fragment_et_address">Address</string>
    <string name="register_fragment_tv_login">로그인</string>
    <string name="register_fragment_btn_register">회원가입</string>

    <!-- User_item -->
    <string name="user_item_tv_name">이름</string>
    <string name="user_item_tv_phone">핸드폰</string>


    <!-- MyProfileDetailFragment -->
    <string name="myprofile_detail_fragment_tv_title">내 정보</string>
    <string name="myprofile_detail_fragment_tv_name">내 이름</string>
    <string name="myprofile_detail_fragment_tv_phone_title">내 휴대전화</string>
    <string name="myprofile_detail_fragment_tv_address_title">내 주소</string>

</resources>