<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.DetailActivity"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_fragment_btn_edit"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_fragment_tv_name"
        android:textSize="@dimen/text_size_35"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey_box"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/tv_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_fragment_phone_title"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_phone_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail_fragment_phone_value"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey_box"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/const_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_fragment_address_title"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_address_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail_fragment_address_value"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_address_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/detail_fragment_btn_call"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_message"
            app:layout_constraintWidth_percent="0.5"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/detail_fragment_btn_message"
            app:layout_constraintStart_toEndOf="@id/btn_call"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>