<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.activity.LoginActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_fragment_tv_login"
        android:textSize="@dimen/text_size_30"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/login_fragment_et_email2_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <EditText
        android:id="@+id/et_password2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_fragment_et_password2_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background_normal"
        app:layout_constraintTop_toBottomOf="@id/et_email2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_fragment_tv_login"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/et_password2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/login_fragment_et_btn_register"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>